# KeePassPinentry

./: .gitignore  CMakeLists.txt  LICENSE
doc/: Overview.md  Todos.md
include/: GpgAgentHandler.h  KeePassXCClient.h  KeePassXCErrors.h  Log.h
src/: GpgAgentHandler.cpp  KeePassXCClient.cpp  Log.cpp  Main.cpp
